# AI-System-DocAI-V5I

./: .gitignore  AI-System-DocAI-V5I.spec  ANSWER_QUALITY_IMPROVEMENTS.md  BUILD_INSTRUCTIONS.md  CHANGELOG_TEMPLATE.md  CHAT_OUTPUT_UPDATE_SUMMARY.md  DISTRIBUTION_GUIDE.md  FINAL_FIX_SUMMARY.md  FORMATTING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_VERIFICATION_SUMMARY.md  PACKAGING_IMPROVEMENTS.md  PACKAGING_SUMMARY.md  PACKAGING_VERIFICATION.md  PYINSTALLER_PACKAGING_CHECKLIST.md  QUICK_BUILD_GUIDE.md  README.md  SYNTHESIS_EXTRACTION_FIX.md  TESTING_GUIDE.md  UI_UX_IMPROVEMENTS.md  WHAT_WAS_FIXED.md  build_exe.bat  build_for_distribution.bat  download_model.bat  download_model.py  download_model.sh  launcher.bat  launcher.py  launcher.sh  main.py  pyproject.toml  requirements.txt  test_packaging.py
docs/: ARCHITECTURE.md  INSTALL.md  README.md  SECURITY.md
installer/: BUILD_INSTALLER.md  INSTALLER_TESTING.md  build_deb.sh  build_rpm.sh  postinstall.sh  postremove.sh  test_installer.iss  test_result.md  verify_installer_setup.bat  windows_installer.iss
src/: app_qt.py  config.py  embeddings.py  enterprise_logging.py  index_manager.py  indexer.py  ingest.py  llm.py  loaders.py  reasoning.py  retrieval.py  streaming_reasoning.py  streaming_reasoning_updated.py  streaming_ui.py  ui.py
